z-index correction in header

--- a/src/components/Navigation-header/Navigation-header.module.scss
+++ b/src/components/Navigation-header/Navigation-header.module.scss
@@ -58,7 +58,7 @@
 
     &__links {
         position: absolute;
-        z-index: 100;
+        z-index: 200;
         background-color: var(--grey);
         top: 133px;
         left: 50%;
